[lworld] Compilation fails with "must have enough JVMS stack to execute invokevirtual"

XMLWordPrintable

      # Internal Error (/oracle/valhallaL/open/src/hotspot/share/opto/graphKit.cpp:2080), pid=21053, tid=21064
      # assert(sp() >= inputs) failed: must have enough JVMS stack to execute invokevirtual: sp=0, inputs=1

      Current CompileTask:
      C2: 46640 1256 b compiler.valhalla.valuetypes.TestLWorld::test65_verifier (95 bytes)

      Stack: [0x00007fa1749b6000,0x00007fa174ab7000], sp=0x00007fa174ab3420, free space=1013k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x1a4176c] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x18c
      V [libjvm.so+0x1a426ff] VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, __va_list_tag*)+0x2f
      V [libjvm.so+0xbdecaa] report_vm_error(char const*, int, char const*, char const*, ...)+0x12a
      V [libjvm.so+0xeeced6] GraphKit::uncommon_trap(int, ciKlass*, char const*, bool, bool)+0x5c6
      V [libjvm.so+0x19de4c5] ValueTypeNode::make_from_oop(GraphKit*, Node*, ciValueKlass*, bool, bool, int)+0x1115
      V [libjvm.so+0x19dd130] ValueTypeBaseNode::load(GraphKit*, Node*, Node*, ciInstanceKlass*, int)+0x380
      V [libjvm.so+0x19de0a0] ValueTypeNode::make_from_oop(GraphKit*, Node*, ciValueKlass*, bool, bool, int)+0xcf0
      V [libjvm.so+0xce36b8] Parse::do_call()+0x1b98
      V [libjvm.so+0x16bc0f8] Parse::do_one_bytecode()+0x658
      V [libjvm.so+0x16abc9a] Parse::do_one_block()+0x39a
      V [libjvm.so+0x16ac841] Parse::do_all_blocks()+0x1d1
      V [libjvm.so+0x16b04db] Parse::Parse(JVMState*, ciMethod*, float)+0xe3b
      V [libjvm.so+0x9028fc] ParseGenerator::generate(JVMState*)+0x1fc
      V [libjvm.so+0xb381c7] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0x1027
      V [libjvm.so+0x900142] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x302
      V [libjvm.so+0xb45f90] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x3c0
      V [libjvm.so+0xb46c79] CompileBroker::compiler_thread_loop()+0x269
      V [libjvm.so+0x1960197] JavaThread::thread_main_inner()+0x287
      V [libjvm.so+0x19603f1] JavaThread::run()+0x191
      V [libjvm.so+0x164496a] thread_native_entry(Thread*)+0xfa

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: