8207848: [lworld] Compilation fails with "must have enough JVMS stack to execute invokevirtual"

Reviewed-by: roland